<resources>
    <string name="app_name">TenantEye</string>
    <string name="todo">TODO</string>
    <string name="wifi_switch_text">Turn on WIFI</string>
    <string name="mobile_data_switch_text">Turn on Mobile Data</string>
    <string name="landing_page_title_text">Tenant\t\t\tEye</string>
    <string name="landing_page_body_text">A House Rental Application</string>
    <string name="on_boarding_button_text_skip">Skip</string>
    <string name="on_boarding_button_text_lets_get_started">Let\'s Get Started</string>
    <string name="on_boarding_welcome_title">Welcome to Tenant Eye</string>
    <string name="on_boarding_welcome_description">A place where you can find your dream home</string>
    <string name="on_boarding_search_title">Search for Tasker/Task</string>
    <string name="on_boarding_search_description">A Tasker can search for a task, and Tenant can search for Tasker\'s to do the task</string>
    <string name="on_boarding_task_title">Create a task</string>
    <string name="on_boarding_task_description">A place where a Tenant can post the task</string>
    <string name="on_boarding_task_done_title">Create a task</string>
    <string name="on_boarding_task_done_description">Once the task is done, the Tenant can close the task</string>
    <string name="on_boarding_chat_title">Chat with other\'s</string>
    <string name="on_boarding_chat_description">Chat with the other users</string>
    <string name="login_welcome_message">Welcome To Tenant Eye</string>
    <string name="login_sign_in_message">Please enter your email and password to sign in</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in_button_text">Sign In</string>
    <string name="login_forgot_password_button_text">Forgot Password?</string>
    <string name="login_new_user_signup_text">Don\'t have an account? <font color="#0000FF">Sign up</font></string>
    <string name="login_new_remember_checkbox_text">Remember Me</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="forgot_password_email_hint">Email</string>
    <string name="forgot_next_button_text">Next</string>
    <string name="forgot_login_button_text">Login</string>
    <string name="forgot_password_selection_make_selection_text">Make Selection</string>
    <string name="forgot_password_selection_info_text">Select which contact detail should we use to reset your password</string>
    <string name="forgot_password_selection_mobile_title_text">via sms:</string>
    <string name="forgot_password_selection_mobile_info_text">+1-(555)-555-5555</string>
    <string name="forgot_password_selection_email_title_text">via email:</string>
    <string name="forgot_password_selection_email_info_text">email@domain.com</string>
    <string name="forgot_password_mobile_title_text">Enter Verification Code</string>
    <string name="forgot_password_mobile_verify_opt_text">Verify Code</string>
    <string name="forgot_password_mobile_verify_opt_message_text">Enter one time password sent on </string>
    <string name="reset_password_mobile_title_text">Enter New Password</string>
    <string name="reset_password_mobile_body_text">Your identity has been verified set your new password</string>
    <string name="reset_password_mobile_new_password_hint_text">New Password</string>
    <string name="reset_password_mobile_confirm_password_hint_text">Confirm Password</string>
    <string name="reset_password_mobile_progressbar_text">Weak</string>
    <string name="reset_password_mobile_password_info_text">For security, your password must be at least 8 characters. With at least 1 number, 1 special character and 1 uppercase letter.</string>
    <string name="reset_password_mobile_password_set_password_button_text">Set New Password</string>
    <string name="reset_password_mobile_password_generate_password_button_text">Generate Strong Password Here</string>
    <string name="reset_password_success_title_text">Password Updated</string>
    <string name="reset_password_success_body_text">Your password has been updated</string>
    <string name="reset_password_success_button_text">Login</string>
    <string name="reset_password_email_title_text">An email has been send to your email address to reset your password</string>
    <string name="reset_password_email_login_button_text">Login</string>
    <string name="reset_password_email_resend_button_text">Resent Email</string>
    <string name="sign_up_one_title_text">Create Account</string>
    <string name="sign_up_one_title_number_text">1 / 4</string>
    <string name="sign_up_one_first_name_hint_text">First Name</string>
    <string name="sign_up_one_last_name_hint_text">Last Name</string>
    <string name="sign_up_one_email_hint_text">Email</string>
    <string name="sign_up_one_country_hint_text">Country</string>
    <string name="sign_up_one_state_hint_text">State</string>
    <string name="sign_up_one_city_hint_text">City</string>
    <string name="sign_up_one_next_button_text">Next</string>
    <string name="sign_up_one_login_button_text">Login</string>
    <string name="sign_up_two_title_text">Create Account</string>
    <string name="sign_up_two_title_number_text">2 / 4</string>
    <string name="sign_up_two_gender_spinner_hint_text">Gender</string>
    <string name="sign_up_two_dob_text">Select Your Date-Of-Birth</string>
    <string name="sign_up_two_next_text">Next</string>
    <string name="sign_up_two_login_text">Login</string>
    <string name="sign_up_two_select_gender_text">Choose Gender</string>
    <string name="sign_up_two_select_user_type_text">Choose User Type</string>
    <string name="sign_up_two_gender_male_text">Male</string>
    <string name="sign_up_two_gender_female_text">Female</string>
    <string name="sign_up_two_gender_other_text">Other</string>
    <string name="sign_up_two_empty_text"> </string>
    <string name="sign_up_two_user_user_text">Tenant</string>
    <string name="sign_up_two_user_freelancer_text">Freelancer</string>
    <string name="sign_up_three_title_text">Create Account</string>
    <string name="sign_up_three_title_number_text">4 / 4</string>
    <string name="sign_up_three_phone_number_hint_text">Phone Number</string>
    <string name="sign_up_three_phone_number_next_button_text">Next</string>
    <string name="sign_up_three_phone_number_login_button_text">Login</string>
    <string name="sign_up_three_phone_number_password_hint_text">Password</string>
    <string name="sign_up_three_phone_number_confirm_password_hint_text">Confirm Password</string>
    <string name="sign_up_three_password_progress_bar_text">Weak</string>
    <string name="tenant_bottom_menu_search_title">Search</string>
    <string name="tenant_bottom_menu_task_title">Task</string>
    <string name="tenant_bottom_menu_create_title">Create</string>
    <string name="tenant_bottom_menu_chat_title">Chat</string>
    <string name="tenant_bottom_menu_more_title">More</string>
    <string name="search_fragment">Search</string>
    <string name="search_fragment_search_hint_text">Search here…</string>
    <string name="chat_fragment">Chat</string>
    <string name="more_fragment">More</string>
    <string name="task_fragment">Task</string>
    <string name="create_fragment">Create</string>
    <string name="custom_card_view_name">John Doe</string>
    <string name="custom_card_view_location">Waterloo, Ontario, Canada</string>
    <string name="custom_card_view_chat">Chat</string>
    <string name="sign_up_success_title_text">Account Created</string>
    <string name="sign_up_success_body_text">Your account is created. You can now login.</string>
    <string name="sign_up_alert_title">Are you sure you want to quit?</string>
    <string name="sign_up_alert_message">All your data will be lost</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="error_alert_title">Something went wrong!</string>
    <string name="error_alert_message">Please try again</string>
    <string name="error_alert_okay">Okay</string>
    <string name="no_user_with_email_alert_title">We can\'t find this email</string>
    <string name="no_user_with_email_alert_message">Are you sure the email is correct?</string>
    <string name="first_name_required">First Name is required</string>
    <string name="first_name_invalid">First Name is invalid</string>
    <string name="last_name_required">Last Name is required</string>
    <string name="last_name_invalid">Last Name is invalid</string>
    <string name="email_address_required">Email Address is required</string>
    <string name="email_address_invalid">Email Address is invalid</string>
    <string name="phone_number_required">Phone Number is required</string>
    <string name="phone_number_invalid">Phone Number is invalid</string>
    <string name="password_required">Password is required</string>
    <string name="password_invalid">Password is invalid. Password should contain more than 6 characters</string>
    <string name="confirm_password_required">Confirm Password is required</string>
    <string name="confirm_password_invalid">Password and Confirm Password are not same</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tenant_create_title_text">Create Task</string>
    <string name="tenant_create_add_title_text">Title</string>
    <string name="tenant_create_description_text">Description</string>
    <string name="tenant_create_address_text">Address</string>
    <string name="tenant_create_start_date_text">Start Date</string>
    <string name="tenant_create_start_time_text">Start Time</string>
    <string name="tenant_create_end_date_text">End Date</string>
    <string name="tenant_create_end_time_text">End Time</string>
    <string name="tenant_create_link_text">Advertisement Link</string>
    <string name="tenant_create_amount_text">Amount</string>
    <string name="tenant_create_create_post_button_text">Create Post</string>
    <string name="tenant_select_country">Country</string>
    <string name="tenant_select_state">State</string>
    <string name="tenant_select_city">City</string>
    <string name="tenant_select_freelancer">Search Freelancer</string>
    <string name="tenant_select_zip_code">Zip Code</string>
    <string name="tenant_select_country_search">Search …</string>
    <string name="tenant_task_title_text">My Tasks</string>
    <string name="tenant_show_task_info_brief_title">Title: </string>
    <string name="tenant_show_task_info_brief_description">Description: </string>
    <string name="tenant_show_task_info_brief_address">Address: </string>
    <string name="tenant_show_task_info_brief_status">Status: </string>
    <string name="tenant_show_task_info_brief_assigned_to">Assigned To: </string>
    <string name="tenant_selected_post_title">Post</string>
    <string name="tenant_selected_post_edit">Edit</string>
    <string name="tenant_selected_post_update">Update</string>
    <string name="tenant_selected_post_delete">Delete</string>
    <string name="tenant_selected_post_check_evidence">Check Evidence</string>
    <string name="tenant_selected_no_posts_text">You don\'t have any posts</string>
    <string name="sign_up_four_upload_image_text">Click To Upload Profile Picture</string>
    <string name="sign_up_four_cancel_button_text">Cancel</string>
    <string name="sign_up_four_save_button_text">Save</string>
    <string name="sign_up_four_title_text">Create Account</string>
    <string name="sign_up_four_title_number_text">3 / 4</string>
    <string name="tenant_search_title_text">Search Freelancers</string>
    <string name="freelancer_bottom_menu_all_tasks">All Tasks</string>
</resources>