<!--<?xml version="1.0" encoding="utf-8"?>-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tenant_bottom_menu_task"
        android:icon="@drawable/baseline_task_24"
        android:title="@string/tenant_bottom_menu_task_title" />

    <item
        android:id="@+id/tenant_bottom_menu_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/tenant_bottom_menu_search_title" />

        <item
            android:id="@+id/tenant_bottom_menu_create"
            android:icon="@drawable/baseline_add_24"
            android:title="@string/tenant_bottom_menu_create_title" />

<!--    <item-->
<!--        android:id="@+id/tenant_bottom_menu_create"-->
<!--        android:title="@string/sign_up_two_empty_text"-->
<!--        android:enabled="false"/>-->

    <item
        android:id="@+id/tenant_bottom_menu_chat"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/tenant_bottom_menu_chat_title" />

    <item
        android:id="@+id/tenant_bottom_menu_more"
        android:icon="@drawable/baseline_more_horiz_24"
        android:title="@string/tenant_bottom_menu_more_title" />

</menu>