<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_color"
    android:padding="5dp"
    tools:context=".signup.SignUpTwoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sign_up_two_back_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:padding="5dp"
            android:src="@drawable/ic_back_white"
            android:transitionName="sign_up_two_back_image_view_transition" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/sign_up_two_title_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/primary_background_color"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/sign_up_two_title_text"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:transitionName="ign_up_two_title_text_view_transition" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/sign_up_two_title_number_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/primary_background_color"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/sign_up_two_title_number_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:transitionName="sign_up_two_title_number_text_view_transition" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/sign_up_two_select_gender_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sign_up_two_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/sign_up_two_gender_male_text"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/sign_up_two_empty_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:visibility="invisible" />

                <RadioButton
                    android:id="@+id/sign_up_two_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/sign_up_two_gender_female_text"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/sign_up_two_empty_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:visibility="invisible" />

                <RadioButton
                    android:id="@+id/sign_up_two_gender_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/sign_up_two_gender_other_text"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/sign_up_two_select_user_type_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sign_up_two_user_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/sign_up_two_user_user_text"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:fontFamily="serif"
                    android:text="@string/sign_up_two_empty_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:visibility="invisible" />

                <RadioButton
                    android:id="@+id/sign_up_two_user_freelancer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/sign_up_two_user_freelancer_text"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/sign_up_two_dob_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <DatePicker
                android:id="@+id/sign_up_two_dob_date_picker_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/search_view_background_color"
                android:calendarTextColor="@color/black"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_up_two_next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="5dp"
                android:background="@color/view_background_color"
                android:fontFamily="serif"
                android:text="@string/sign_up_two_next_text"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:transitionName="sign_up_two_next_button_transition" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_up_two_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="5dp"
                android:background="@color/transparent_background_color"
                android:fontFamily="serif"
                android:text="@string/sign_up_two_login_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:transitionName="sign_up_two_login_button_transition" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>