<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_margin="10dp"
    android:background="@color/lavender"
    android:elevation="20dp"
    android:padding="10dp"
    app:cardBackgroundColor="@color/card_view_background_color"
    app:cardCornerRadius="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/card_view_background_color"
            android:elevation="20dp"
            app:cardCornerRadius="80dp">

            <ImageView
                android:id="@+id/custom_card_view_image_view"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/tenant_eye_logo" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/custom_card_view_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_card_view_name"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/custom_card_view_place_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_card_view_location"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:max="5"
                android:rating="5"
                android:scaleX=".5"
                android:scaleY=".5"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/custom_card_view_button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_button"
            android:text="@string/custom_card_view_chat"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>