<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_color"
    android:padding="5dp"
    tools:context=".forgotpassword.ForgotPasswordSelectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/forgot_password_selection_back_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:padding="5dp"
            android:src="@drawable/ic_back_white"
            android:transitionName="forgot_password_selection_back_image_view_transition" />

        <TextView
            android:id="@+id/forgot_password_selection_make_selection_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/forgot_password_selection_make_selection_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:transitionName="forgot_password_selection_make_selection_text_transition" />

        <TextView
            android:id="@+id/forgot_password_selection_info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="serif"
            android:text="@string/forgot_password_selection_info_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/card_view_background_color"
            android:padding="10dp">

            <ImageView
                android:id="@+id/forgot_password_selection_mobile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/mobile_2" />

            <TextView
                android:id="@+id/forgot_password_selection_mobile_text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/forgot_password_selection_mobile_image"
                android:fontFamily="serif"
                android:text="@string/forgot_password_selection_mobile_title_text"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgot_password_selection_mobile_text_view_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password_selection_mobile_text_view_title"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/forgot_password_selection_mobile_image"
                android:fontFamily="serif"
                android:text="@string/forgot_password_selection_mobile_info_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/forgot_password_selection_mobile_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_transparent" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/card_view_background_color"
            android:padding="10dp">

            <ImageView
                android:id="@+id/forgot_password_selection_email_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/email_1" />

            <TextView
                android:id="@+id/forgot_password_selection_email_text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/forgot_password_selection_email_image"
                android:fontFamily="serif"
                android:text="@string/forgot_password_selection_email_title_text"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgot_password_selection_email_text_view_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password_selection_email_text_view_title"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/forgot_password_selection_email_image"
                android:fontFamily="serif"
                android:text="@string/forgot_password_selection_email_info_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/forgot_password_selection_email_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_transparent" />

        </RelativeLayout>

        <include layout="@layout/show_internet_options" />

    </LinearLayout>

</ScrollView>